--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,12 +3,14 @@ import "@/styles/global.css";
 
 import BaseHead from "@/components/BaseHead.astro";
 import Footer from "@/components/Footer.astro";
+import Analytics from '@vercel/analytics/astro'
 ---
 
 <html lang="en">
   <BaseHead>
     <slot name="head" />
   </BaseHead>
+  <Analytics/>
   <body class="mx-auto min-h-screen max-w-screen-sm p-3 font-sans sm:p-6">
     <main>
       <slot />
